--- a/style.css
+++ b/style.css
@@ -434,6 +434,8 @@ footer p {
   text-align: center;
 }
 #datetime {
+  margin-top: 0;
+  margin-bottom: 0;
   display: flex;
   align-items: center;
   justify-content: center;
